LRDOCS-13888 Fix Wildfly installation steps